--- a/src/gui/query.html
+++ b/src/gui/query.html
@@ -9,10 +9,11 @@
 		<div id="container">
 			<span id="query_title"></span>
 
-			<label for="search_bar">Buscar: </label>
+			<label id="search_bar_label" for="search_bar"></label>
 			<input id="search_bar" type="text"></input>
+			<button id="button_search" type="button">Buscar</button>
 
-			<div id="query">
+			<div id="query_container">
 				
 			</div>
 
