pre entrega comanda

--- a/src/gui/entrega_comanda.html
+++ b/src/gui/entrega_comanda.html
@@ -3,22 +3,26 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>AM</title>
-		<link rel="stylesheet" href="./am.css" type="text/css">
+		<link rel="stylesheet" href="./entrega_comanda.css" type="text/css">
 	</head>
 	<body>
 		<div id="container">
-			<span id="form_title"></span>
-			<span id="delivery_name" data-delivery-id="0"></span>
-			<button id="select_delivery" type="button">Seleccionar repartidor</button>
+			<span id="form_title">Registro de entrega de comanda</span>
 
+			
 			<div id="form">
 				
 			</div>
 
+			<div id="form_order">
+				
+			</div>
+
 			<button id="button_accept" type="button">Aceptar</button>
+			<button id="button_cancel" type="button">Cancelar</button>
 		</div>
 	</body>
 	<script style="display: none;">
-		require("./am.js")
+		require("./entrega_comanda.js")
 	</script>
 </html>
