--- a/src/gui/menu.html
+++ b/src/gui/menu.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 		<meta charset="UTF-8">
-		<title>AM</title>
+		<title>Menú</title>
 		<link rel="stylesheet" href="./menu.css" type="text/css">
 	</head>
 	<body>
