--- a/src/gui/am_insumo.html
+++ b/src/gui/am_insumo.html
@@ -7,9 +7,9 @@
 	</head>
 	<body>
 		<div id="container">
+			<label for="id_insumo">ID Insumo</label>
+			<input id="id_insumo" type="text">
 
-			<span id="form_title">insumo</span>
-			
 			<div id="form">
 
 			</div>
