--- a/src/gui/query_comanda.html
+++ b/src/gui/query_comanda.html
@@ -27,6 +27,16 @@
 			</div>
 		</template>
 
+		<template id="template_platillo">
+			<div class="platillo">
+				<span class="id_platillo"></span>
+				<span class="nombre"></span>
+				<span class="costo"></span>
+				<span class="cantidad"></span>
+				<img class="imagen" src="">
+			</div>
+		</template>
+
 		<div id="container">
 
 			<label for="search_bar">Buscar:</label>
