--- a/src/gui/login.html
+++ b/src/gui/login.html
@@ -15,7 +15,7 @@
 
 			<div>
 				<label for="input_password">Contraseña</label>
-				<input id="input_password" type="text">
+				<input id="input_password" type="password">
 			</div>
 
 			<button id="button_login" type="button">Iniciar sesión</button>
