pre-fix comanda telefonica

--- a/src/gui/a_comanda.html
+++ b/src/gui/a_comanda.html
@@ -20,24 +20,18 @@
 	
 						<label for="nombre">Nombre cliente</label>
 						<input id="nombre" type="text"></input>
-					</div>
-					
-					<label for="telefonica">Comanda telefonica</label>
-					<input id="telefonica" type="checkbox" checked></input>
-	
-					<div id="order_data_tel">
 
 						<label for="hora">Hora de entrega</label>
 						<input id="hora" type="time"></input>
 
 						<label for="local">No. Local</label>
-						<input id="local" type="number"></input>
+						<input id="local" type="number" value="0"></input>
 	
 						<label for="plaza">Plaza</label>
 						<input id="plaza" type="text"></input>
 	
 						<label for="piso">Piso</label>
-						<input id="piso" type="number"></input>
+						<input id="piso" type="number" value="0"></input>
 	
 						<label for="pasillo">Pasillo</label>
 						<input id="pasillo" type="text"></input>
@@ -64,7 +58,6 @@
 					</template>
 
 					<div id="platillos">
-
 
 					</div>
 
