--- a/src/gui/a_compra.html
+++ b/src/gui/a_compra.html
@@ -37,7 +37,7 @@
 				<label for="id_compra">ID Compra</label>
 				<input id="id_compra" type="number"></input>
 
-				<label for="id_proveedor">ID Proveedor</label>
+				<label id="label_id_proveedor" for="id_proveedor">ID Proveedor</label>
 				<input id="id_proveedor" type="number"></input>
 
 				<label for="fecha">Fecha</label>
