--- a/src/gui/a_comanda.html
+++ b/src/gui/a_comanda.html
@@ -21,20 +21,31 @@
 						<label for="nombre">Nombre cliente</label>
 						<input id="nombre" type="text"></input>
 
-						<label for="hora">Hora de entrega</label>
-						<input id="hora" type="time"></input>
+						<div>
 
-						<label for="local">No. Local</label>
-						<input id="local" type="number" value="0"></input>
+							<div>
+								<label for="hora">Hora de entrega</label>
+								<input id="hora" type="time"></input>
+							</div>
 	
-						<label for="plaza">Plaza</label>
-						<input id="plaza" type="text"></input>
-	
-						<label for="piso">Piso</label>
-						<input id="piso" type="number" value="0"></input>
-	
-						<label for="pasillo">Pasillo</label>
-						<input id="pasillo" type="text"></input>
+							<div>
+								<label for="local">No. Local</label>
+								<input id="local" type="number" value="0"></input>
+							</div>
+		
+							<div>
+								<label for="plaza">Plaza</label>
+								<input id="plaza" type="text"></input>
+							</div>
+							
+							<div>
+								<label for="piso">Piso</label>
+								<input id="piso" type="number" value="0"></input>
+							</div>
+		
+							<label for="pasillo">Pasillo</label>
+							<input id="pasillo" type="text"></input>
+						</div>
 					</div>
 
 					<button id="button_order_data_continue" type="button">Continuar</button>
