--- a/src/gui/a_comanda.html
+++ b/src/gui/a_comanda.html
@@ -30,17 +30,17 @@
 	
 							<div>
 								<label for="local">No. Local</label>
-								<input id="local" type="number" value="0"></input>
+								<input id="local" type="number" value="1" min="1"></input>
 							</div>
 		
 							<div>
 								<label for="plaza">Plaza</label>
-								<input id="plaza" type="text"></input>
+								<select id="plaza" name="plaza"></select>
 							</div>
 							
 							<div>
 								<label for="piso">Piso</label>
-								<input id="piso" type="number" value="0"></input>
+								<input id="piso" type="number" value="1" min="1"></input>
 							</div>
 		
 							<label for="pasillo">Pasillo</label>
